feat(vehicles): finished developing the apis for the feat
